appdeploy.yaml
apiVersion: v1 
kind: Deployment
metadata:
  name: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: r0mev/vprofileapp
        imagePullPolicy: Always
        resources:

        ports:
         - name: vproapp-port
           containerPort: 8080
