dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: r0mev/vprofiledb
        volumeMounts:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
             
        resources:
        ports:
        - name: vprodb-port
          containerPort: 3306
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
