appservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    Protocol: TCP
  selector:
    app: vproapp
  type: ClusterIP
