mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  ports:
   - port: 11211
     targetPort: vpromc-port
     Protocol: TCP
  selector:
    app: vpromc
  type: ClusterIP
