rmqservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vpromq01
  ports:
  - port: 5672
    targetPort: vprormq-port
    Protocol: TCP
  selector:
    app: vprormq
  type: ClusterIP
