appingress.yaml
apiVersion: networkinng.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.r0mev.com
  http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp-service
            ports:
              number: 80
